# PPP

./: .gitignore  PPP_support.h  README.md
01 - Hello World/: hello_world  hello_world.cpp
02 - Objects, Types and Values/: conversions  conversions.cpp  detect_repeated_words  detect_repeated_words.cpp  letter  letter.cpp  name_and_age  name_and_age.cpp  names  names.cpp  operations_and_operators  operations_and_operators.cpp
03 - Computation/: alphabet_printing_loop  alphabet_printing_loop.cpp  alphabet_printing_loop_for  alphabet_printing_loop_for.cpp  bleep  bleep.cpp  currency_converter  currency_converter_else_if.cpp  currency_converter_switch  currency_converter_switch.cpp  drill  drill.cpp  square  square.cpp  time  time.cpp
04 - Errors/: drill  drill.cpp  errors_function_calls.cpp  exercise_1  exercise_1.cpp  runtime_errors  runtime_errors.cpp  uncaught_exception.cpp
05 - Writing a Program/: calculator00  calculator00.cpp  calculator01  calculator01.cpp  calculator02  calculator02buggy.cpp
06 - Completing a Program/: calculator08  calculator08buggy.cpp
07 - Technicalities/: conversions  conversions.cpp  declarations  declarations.cpp  foo.cpp  foo.h  indentations.cpp  namespaces  namespaces.cpp  swap  swap.cpp  use  use.cpp
08 - Technicalities Part II/: date_final  date_final.cpp  date_v1  date_v1.cpp  (+2 more)
10 - A Display Model/: CMakeCache.txt  CMakeLists.txt  Colormap.cpp  GUI.cpp  Graph.cpp  Makefile  Simple_window.cpp  Window.cpp  cmake_install.cmake  drill.cpp
10 - A Display Model/Headers/: GUI.h  GUI_private.h  Graph.h  Simple_window.h  Window.h
(+76 files in other folders)
